syntax = "proto3";

package api.oms;

import "google/protobuf/any.proto";

option go_package = "edu/api/oms;oms";
option java_multiple_files = true;
option java_package = "api.oms";

message ApiReply {
    int32 code = 1;
    string reason = 2;
    string message = 3;
    int32 ttl = 4;
    int32 pageIndex = 5;
    int32 pageSize = 6;
    int32 count = 7; // total
    repeated google.protobuf.Any data = 8;
}

message Order {}

message CompanyAddress {}
